--- a/ec_index.html
+++ b/ec_index.html
@@ -47,9 +47,9 @@
         <footer>
             <div class="location">
                 <i class="fas fa-map-marker-alt"></i>
-                <p>Indore, India</p>
-                <p>8933 Country Club Road Batavia OH 45103</p>
-                <p>+918109817897</p>
+                <p>Rennes, France</p>
+                <!-- <p>8933 Country Club Road Batavia OH 45103</p> -->
+                <!-- <p>+918109817897</p> -->
             </div>
             <div class="contact">
                 <h2 class="contact-title">Contact us</h2>
