Updated ecwebsite html & css

--- a/ec_index.html
+++ b/ec_index.html
@@ -1,68 +1,82 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="ec_style.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-        <title>Elikia Construction</title>
-    </head>
-    <body>
-        <div class="header-section">
-            <header class="header">
-                <div class="logo">
-                    elikia construction
-                </div>
-                <nav class="navbar">
-                    <ul class="nav-list">
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="ec_style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+        integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <title>Elikia Construction</title>
+</head>
+
+<body>
+    <div class="header-section">
+        <header class="header">
+            <div class="logo">
+                <img src="images/logo_ec.jpg" alt="logo" height="70">
+            </div>
+            <nav class="navbar">
+                <ul class="nav-list">
                     <li class="nav-items active">Home</li>
                     <li class="nav-items">About</li>
                     <li class="nav-items">Services</li>
                     <li class="nav-items">Contact</li>
-                    </ul>
-                </nav>
-            </header>
-            <div class="header-content">
-                <h1>elikia construction <br> 
-                    <strong>digital agency</strong></strong></h1>
-                <p>We will craft a beautiful and useful functional experience</p>
-                <i class="fas fa-long-arrow-alt-down"></i>
-            </div>
+                </ul>
+            </nav>
+        </header>
+        <div class="header-content">
+            <h1>elikia construction <br>
+                <strong>digital agency</strong></h1>
+            <p>We will craft a beautiful and useful functional experience</p>
+            <i class="fas fa-long-arrow-alt-down"></i>
         </div>
-        <main class="main-content">
-            <div class="about">
-                <h2>about Elikia Construction</h2>
-                <p>Shabcreations is a Digital Creative Agency. We create joyful digital <br> experiences and unique visual identities that tickle the brain, <br> please the eyes & connect the hearts of brands to the <br> hearts of their consumers.</p>
-                <a href="#" class="btn learn-more">Learn more</a>
-            </div>
-            <div class="services">
-                <h2>our services</h2>
-                <p>Cresol is a Digital Creative Agency. We create joyful digital <br> experiences and unique visual identities </p>
+    </div>
+    <main class="main-content">
+        <div class="about">
+            <h2>a propos</h2>
+            <p>Shabcreations is a Digital Creative Agency. We create joyful digital <br> experiences and unique visual
+                identities that tickle the brain, <br> please the eyes & connect the hearts of brands to the <br> hearts
+                of their consumers.</p>
+            <a href="#" class="btn learn-more">Plus</a>
+        </div>
+        <div class="services">
+            <div class="services-content">
+                <h2>nos services</h2>
+                <p>Cresol is a Digital Creative Agency. We create joyful digital <br> experiences and unique visual
+                    identities </p>
                 <ul class="list-image">
-                    <li><img src="app_dev.jpg" class="img" alt="iphone"> <br> App Development</li>
-                    <li><img src="web_dev.jpg" class="img" alt="macbook"> <br> Web Development</li>
-                    <li><img src="qa_testing.jpg" class="img" alt="fingers"> <br> Qa Testing</li>
+                    <li><img src="images/app_dev.jpg" class="img" alt="iphone"> <br>
+                        <p>Application</p>
+                    </li>
+                    <li><img src="images/web_dev.jpg" class="img" alt="macbook"> <br>
+                        <p>Development</p>
+                    </li>
+                    <li><img src="images/qa_testing.jpg" class="img" alt="fingers"> <br>
+                        <p>Testing</p>
+                    </li>
                 </ul>
             </div>
-        </main>
-        <footer>
-            <div class="location">
-                <i class="fas fa-map-marker-alt"></i>
-                <p>Rennes, France</p>
-                <p>8933 Country Club Road Batavia OH 45103</p>
-		<p>+918109817897</p>
-            </div>
-            <div class="contact">
-                <h2 class="contact-title">Contact us</h2>
-                <form class="contact-form" action="index.html" method="post">
-                    <input type="text" class="form-input" placeholder="Your Name">
-                    <input type="text" class="form-input" placeholder="Subject">
-                    <textarea name="texte-area-description" class="form-text" placeholder="Description" cols="50" rows="5"></textarea>
-                </form>
-                <a href="#" class="btn submit">Submit</a>
-            </div>
-        </footer>
-
         </div>
-    </body>
-    
+    </main>
+    <footer>
+        <div class="location">
+            <i class="fas fa-map-marker-alt"></i>
+            <p>Rennes, France</p>
+            <!-- <p>8933 Country Club Road Batavia OH 45103</p> -->
+            <!-- <p>+918109817897</p> -->
+        </div>
+        <div class="contact">
+            <h2 class="contact-title">Contactez-nous</h2>
+            <form class="contact-form" action="index.html" method="post">
+                <input type="text" class="form-input" placeholder="Your Name">
+                <input type="text" class="form-input" placeholder="Subject">
+                <textarea name="texte-area-description" class="form-text" placeholder="Description" cols="50"
+                    rows="5"></textarea>
+            </form>
+            <a href="#" class="btn submit">Envoyer</a>
+        </div>
+    </footer>
+    </div>
+</body>
+
 </html>
