--- a/ec_index.html
+++ b/ec_index.html
@@ -13,30 +13,29 @@
     <div class="header-section">
         <header class="header">
             <div class="logo">
-                <img src="images/logo_ec.jpg" alt="logo" height="70">
+                <img src="images/logo_final.svg" alt="logo" height="70">
             </div>
             <nav class="navbar">
                 <ul class="nav-list">
-                    <li class="nav-items active">Home</li>
-                    <li class="nav-items">About</li>
-                    <li class="nav-items">Services</li>
-                    <li class="nav-items">Contact</li>
+                    <a href="#"><li class="nav-items active">Home</li></a>
+                    <a href="#"><li class="nav-items">About</li></a>
+                    <a href="#"><li class="nav-items">Services</li></a>
+                    <a href="#"><li class="nav-items">Contact</li></a>
                 </ul>
             </nav>
         </header>
         <div class="header-content">
             <h1>elikia construction <br>
                 <strong>digital agency</strong></h1>
-            <p>We will craft a beautiful and useful functional experience</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             <i class="fas fa-long-arrow-alt-down"></i>
         </div>
     </div>
     <main class="main-content">
         <div class="about">
             <h2>a propos</h2>
-            <p>Shabcreations is a Digital Creative Agency. We create joyful digital <br> experiences and unique visual
-                identities that tickle the brain, <br> please the eyes & connect the hearts of brands to the <br> hearts
-                of their consumers.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Aut sunt fuga, ea vel voluptas
+                veniam saepe eaque sequi tenetur beatae, <br> corrupti numquam. Facilis vero ex neque <br> provident officia sunt totam.</p>
             <a href="#" class="btn learn-more">Plus</a>
         </div>
         <div class="services">
@@ -68,9 +67,9 @@
         <div class="contact">
             <h2 class="contact-title">Contactez-nous</h2>
             <form class="contact-form" action="index.html" method="post">
-                <input type="text" class="form-input" placeholder="Your Name">
-                <input type="text" class="form-input" placeholder="Subject">
-                <textarea name="texte-area-description" class="form-text" placeholder="Description" cols="50"
+                <input type="text" class="form-input" placeholder="Nom">
+                <input type="text" class="form-input" placeholder="Sujet">
+                <textarea name="texte-area-description" class="form-text" placeholder="Votre message" cols="50"
                     rows="5"></textarea>
             </form>
             <a href="#" class="btn submit">Envoyer</a>
