updated html: map added

--- a/ec_index.html
+++ b/ec_index.html
@@ -59,8 +59,9 @@
     </main>
     <footer>
         <div class="location">
-            <i class="fas fa-map-marker-alt"></i>
-            <p>Rennes, France</p>
+            <!-- <i class="fas fa-map-marker-alt"></i> -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2954.9960241442845!2d-1.6663126987962535!3d48.125828744409155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480ede5d2ebf7567%3A0xeeaec517cb01dd6f!2sLe%20Er&#39;Lannic%2C%203%20Boulevard%20Emmanuel%20Mounier%2C%2035700%20Rennes!5e0!3m2!1sfr!2sfr!4v1573030062854!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="">location</iframe>
+            <!-- <p>Rennes, France</p> -->
             <!-- <p>8933 Country Club Road Batavia OH 45103</p> -->
             <!-- <p>+918109817897</p> -->
         </div>
